--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body id="bodyhome">
         
             
-            <h1 id="headerhome"> Physical <br> Well-Being
+            <h1 id="headerhome"> Physical <br> Well-being
             <link rel="preconnect" href="hhtps://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&display=swap" rel="stylesheet"></h1>
