Update index.html containers added

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
              <p class="copyright">
                Made by Yasanthi Grootscholten 2023 ©
                <br>
-               Email: physical.wellbeing@gmail.com
+               Email: physicalwellbeing@gmail.com
              </p>
                
            </section>
