--- a/legexercises.html
+++ b/legexercises.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name=" viewport" content="width-device-width", initial-scale="1">
-    <title>Leg Exercises</title>
+    <title>Leg exercises</title>
 
     <h1>
         <a href="legexercises.html">Leg Exercises</a>
