Update legexercises.html image containers added

--- a/legexercises.html
+++ b/legexercises.html
@@ -8,7 +8,7 @@
     <title>Leg exercises</title>
 
     <h1>
-        <a href="legexercises.html">Leg Exercises</a>
+        <a href="legexercises.html">Leg exercises</a>
     <link rel="preconnect" href="hhtps://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&display=swap" rel="stylesheet">
