--- a/information.html
+++ b/information.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name=" viewport" content="width-device-width", initial-scale="1">
-    <title>Information</title>
+    <title>information</title>
 
     <h1>
         <a href="information.html">Information</a>
